Added support to items search and indexation